fix z-index

--- a/index.css
+++ b/index.css
@@ -970,7 +970,7 @@ input[type="reset"] {
   background-size: 200% 200%;
   box-shadow: inset 0 0 120px 100px #ffffff;
   animation: personalSkyBreath 10s ease infinite;
-  z-index: 0; 
+  z-index: -1; 
   margin-bottom: -100vh;
 }
 
